Wrote a bit about using Option

--- a/css/screen.css
+++ b/css/screen.css
@@ -14,7 +14,10 @@ table {
 table,th, td {
   border: 1px solid black;
 }
-td { padding: 5px ;}
+td { 
+  padding: 5px ;
+  vertical-align:top;
+}
 
 #container {
   text-align: left;
