--- a/css/screen.css
+++ b/css/screen.css
@@ -12,7 +12,7 @@ table { font: normal normal normal 13px/1.231 arial, helvetica, clean, sans-seri
 }
 
 .ace_scroller {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 #editor {
