--- a/css/screen.css
+++ b/css/screen.css
@@ -65,10 +65,6 @@ td {
   color: #333;
   padding: 20px 40px 20px 40px;
   border-bottom: 10px solid #666;
-  
-  /*clearfix*/
-  overflow: hidden;
-  *zoom: 1;
 }
 
 #menu {
@@ -125,4 +121,29 @@ a {
 {
 	clear: both;
 	margin: 50px 0px;
+}
+
+/*
+  ¨HACKS
+*/
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
 }
