--- a/jsdoc-templates/class.tmpl
+++ b/jsdoc-templates/class.tmpl
@@ -10,6 +10,10 @@
 		<style type="text/css">
 			{+include("static/default.css")+}
 		</style>
+		
+		<style type="text/css" media="print">
+            {+include("static/print.css")+}
+        </style>
 	</head>
 
 	<body>
